Fix overflow on ios safari

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@
 body {
   height: 100vh;
   background-color: $grey;
+  position: relative;
   overflow: hidden;
 }
 
